[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"

[project]
name = "thinkthinksyn"
dependencies = [
  "numpy",
  "pydantic",
  "sympy",
  "aiossechat",
  "colorlog",
  "attrs",
  "typeguard",
  "typing>=3.7",
  "typing-extensions>=4.14",
  "pillow",
  "psutil",
  "aioftp",
  "aiohttp",
  "pydub"
]
requires-python = ">= 3.11"
authors = [
  {name = "ThinkThinkSyn", email = "contact@thinkthinksyn.com"},
]

[project.optional-dependencies]
full = [
  "noisereduce"
]